added loose message

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <button class="button" id="resetButton" hidden>Reset</button>
     </div>
 
+    <p id="looseText"></p>
+
     <div class="game">
         <canvas width="750" height="585" id="myCanvas"></canvas>
     </div>
